--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
-django==4.2
-djangorestframework==3.14.0
-Pillow==9.5.0
-stripe==5.4.0
-django-environ==0.10.0
-django-cors-headers==3.14.0
-django_cloudinary_storage==0.3.0
-django-countries==7.5.1
-django-jet-reboot==1.3.3
-feedparser==6.0.10
-psycopg2-binary==2.9.6
-psycopg2==2.9.6
+asgiref==3.6.0
+backports.zoneinfo==0.2.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
+cloudinary==1.32.0
 dj-database-url==2.0.0
+Django==4.2
+django-cloudinary-storage==0.3.0
+django-cors-headers==3.14.0
+django-countries==7.5.1
+django-environ==0.10.0
+django-galleryfield==2.1.3
+django-jet-reboot==1.3.3
+djangorestframework==3.14.0
+feedparser==6.0.10
+idna==3.4
+Pillow==9.5.0
+pkg_resources==0.0.0
+psycopg2==2.9.6
+psycopg2-binary==2.9.6
+pytz==2023.3
+requests==2.30.0
+sgmllib3k==1.0.0
+six==1.16.0
+sorl-thumbnail==12.9.0
+sqlparse==0.4.4
+stripe==5.4.0
+typing_extensions==4.5.0
+urllib3==1.26.15
